Add Java 9 targets. [2345]
This allows us to get Swing to scale things properly. VisAD still needs
some work though. There's still an unresolved issue related to finding
the UTF-8 codec.

The new targets are "jar.runlarge9" and "debug.runlarge9".