@@ -26,6 +26,13 @@
     <property name="heap.dir" location="/tmp/mcidasv-heapdump.hprof" />
 
     <!--
+      Controls Swing UI scaling. If you're using a HiDPI display,
+      try setting this value to 2. Note: this only applies to the
+      "jar.runlarge9" and "debug.runlarge9" targets (they use Java 9).
+    -->
+    <property name="uiscale" value="1" />
+
+    <!--
       This section attempts to set the path to the local ADDE servers in
       a platform independent way. In order to take advantage of this, you
       MUST install McIDAS-V into the directory suggested by the installer.
@@ -891,14 +898,15 @@
       <!-- <jvmarg value="-XX:TieredStopAtLevel=1" /> -->
       <jvmarg value="-noverify" />
       <jvmarg value="-XX:+DoEscapeAnalysis" />
+
       <!--
         The following two lines will allow the JVM to dump the heap's
-        contents on an OutOfMemory exception (very helpful!).
         ${heap.dir} defaults to "/tmp/mcidasv-heapdump.hprof" but feel free
         to change it.
       -->
       <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
       <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
+
       <!--
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
       <sysproperty key="debug.adde.reqs" value="false" />
@@ -923,6 +931,52 @@
       <sysproperty key="sun.java2d.opengl" value="True" />
       <sysproperty key="sun.java2d.trace" value="log,timestamp,count,out:./java2d.log,verbose" />
       -->
+      <arg value="-forceaqua" />
+      <arg value="-userpath" />
+      <arg value="${userpath.dir}" />
+    </java>
+  </target>
+
+  <target name="jar.runlarge9" depends="jar" description="Build and run McIDAS-V application (large memory)">
+    <java fork="true" maxmemory="${run.largeheap}" dir="${dist.dir}" jar="${dist.dir}/mcidasv.jar">
+      <classpath refid="app.classpath" />
+      <assertions refid="mcv.assertions"/>
+
+      <jvmarg value="--add-exports" />
+      <jvmarg value="java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED" />
+      <jvmarg value="--add-exports" />
+      <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" />
+      <jvmarg value="--add-exports" />
+      <jvmarg value="java.desktop/sun.awt=ALL-UNNAMED" />
+      <jvmarg value="--add-exports" />
+      <jvmarg value="java.desktop/sun.swing=ALL-UNNAMED" />
+      <jvmarg value="--add-opens" />
+      <jvmarg value="java.base/java.lang=ALL-UNNAMED" />
+      <jvmarg value="--add-opens" />
+      <jvmarg value="java.base/java.lang.reflect=ALL-UNNAMED" />
+      <jvmarg value="--add-opens" />
+      <jvmarg value="java.management/sun.management=ALL-UNNAMED" />
+      <jvmarg value="--add-opens" />
+      <jvmarg value="jdk.management/com.sun.management.internal=ALL-UNNAMED" />
+      <jvmarg value="-noverify" />
+      <jvmarg value="-XX:+DoEscapeAnalysis" />
+      <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
+      <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
+
+      <sysproperty key="sun.java2d.uiScale" value="${uiscale}" />
+      <sysproperty key="loglevel" value="${run.log.level}" />
+      <sysproperty key="mcv.userpath" value="${userpath.dir}" />
+      <sysproperty key="mcv.logpath" value="${userpath.dir}/mcidasv.log" />
+      <sysproperty key="debug.adde.reqs" value="true" />
+      <sysproperty key="idv.usetimedriver" value="true" />
+      <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
+      <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
+      <sysproperty key="visad.java3d.noerasebackground" value="true" />
+      <sysproperty key="visad.java3d.textureNpot" value="true" />
+      <sysproperty key="visad.java3d.imageByRef" value="true" />
+      <sysproperty key="visad.java3d.geometryByRef" value="true" />
+      <sysproperty key="python.security.respectJavaAccessibility" value="false" />
+
       <arg value="-forceaqua" />
       <arg value="-userpath" />
       <arg value="${userpath.dir}" />
@@ -968,6 +1022,54 @@
       <arg value="${userpath.dir}" />
     </java>
   </target>
+
+    <target name="debug.runlarge9" depends="jar" description="Build and run McIDAS-V application (large memory)">
+        <java classname="${app.mainclass}" fork="true" maxmemory="${run.largeheap}">
+            <classpath refid="app.classpath" />
+            <assertions refid="mcv.assertions"/>
+
+            <jvmarg value="--add-exports" />
+            <jvmarg value="java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED" />
+            <jvmarg value="--add-exports" />
+            <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" />
+            <jvmarg value="--add-exports" />
+            <jvmarg value="java.desktop/sun.awt=ALL-UNNAMED" />
+            <jvmarg value="--add-exports" />
+            <jvmarg value="java.desktop/sun.swing=ALL-UNNAMED" />
+            <jvmarg value="--add-opens" />
+            <jvmarg value="java.base/java.lang=ALL-UNNAMED" />
+            <jvmarg value="--add-opens" />
+            <jvmarg value="java.base/java.lang.reflect=ALL-UNNAMED" />
+            <jvmarg value="--add-opens" />
+            <jvmarg value="java.management/sun.management=ALL-UNNAMED" />
+            <jvmarg value="--add-opens" />
+            <jvmarg value="jdk.management/com.sun.management.internal=ALL-UNNAMED" />
+            <!-- Prepares the JVM for a debugging session on port 8001 -->
+            <jvmarg value="-Xdebug"/>
+            <jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,address=8001,suspend=y"/>
+            <jvmarg value="-XX:+UseConcMarkSweepGC" />
+            <jvmarg value="-XX:+CMSClassUnloadingEnabled" />
+            <jvmarg value="-XX:+CMSPermGenSweepingEnabled" />
+            <jvmarg value="-XX:MaxPermSize=512m" />
+            <jvmarg value="-noverify" />
+            <jvmarg value="-XX:+DoEscapeAnalysis" />
+            <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
+            <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
+
+            <sysproperty key="sun.java2d.uiScale" value="${uiscale}" />
+            <sysproperty key="textureWidthMax" value="${visad.texturemax}" />
+            <sysproperty key="mcv.userpath" value="${userpath.dir}" />
+            <sysproperty key="mcv.logpath" value="${userpath.dir}/mcidasv.log" />
+            <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
+            <sysproperty key="debug.adde.reqs" value="true" />
+            <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
+            <sysproperty key="python.security.respectJavaAccessibility" value="false" />
+
+            <arg value="-forceaqua" />
+            <arg value="-userpath" />
+            <arg value="${userpath.dir}" />
+        </java>
+    </target>
 
   <!-- Build McIDAS-V and run a Jython script (large memory). -->
   <!-- Here's an example shell function (should work in bash/zsh):
